potential firefox overflow fix

--- a/src/sass/messageView.scss
+++ b/src/sass/messageView.scss
@@ -364,6 +364,9 @@
                 }
             }
         }
+        &.closed .summary {
+            overflow: hidden;
+        }
     }
 }
 
